Refactor na na estrutura de packages

--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,10 @@ replay_pid*
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+./.vscode/*
+
+bin/*
+./bin/*
 
 # Local History for Visual Studio Code
 .history/
